--- a/plotting_k8s_metrics.ipynb
+++ b/plotting_k8s_metrics.ipynb
@@ -51,7 +51,7 @@
     "packets_df = trace_plotting.import_pcap_as_dataframe(\n",
     "    wireshark_traces, \n",
     "    http2_ports = \"32445,5002,5000,32665,80,32077,5006,8080,3000,8081\",\n",
-    "    wireshark_version = 'latest')\n",
+    "    wireshark_version = '4.2.3')\n",
     "display(packets_df)\n",
     "wireshark_imported = packets_df is not None\n",
     "one_wireshark_trace = len(packets_df.file.unique()) == 1"
@@ -153,7 +153,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
